# example1

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  UNIT_TESTING.md  create_vs_solution.bat
main/: CMakeLists.txt  interval_map.hpp  main.cpp  main.hpp
main/tests/: interval_map_unittest.cpp  performance_profiler_unittest.cpp  timer_unittest.cpp
main/util/: perf_macros.h  performance_profiler.cpp  performance_profiler.hpp  timer.hpp
main/util/win/: performance_profiler_win.cpp
